--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "antd-mobile": "^2.2.6",
     "babel-plugin-import": "^1.11.0",
     "dva": "^2.4.1",
+    "node-sass": "^4.10.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "babel-plugin-dva-hmr": "^0.3.2",
