--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "private": true,
   "scripts": {
-    "start": "roadhog server",
-    "build": "roadhog build",
+    "start": "cross-env API_ENV=dev roadhog server",
+    "build": "cross-env API_ENV=prod roadhog build",
+    "build:dev": "cross-env API_ENV=dev roadhog build",
     "lint": "eslint --ext .js src test",
     "precommit": "npm run lint"
   },
   "dependencies": {
     "antd-mobile": "^2.2.6",
+    "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
     "dva": "^2.4.1",
     "node-sass": "^4.10.0",
+    "prop-types": "^15.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "babel-plugin-dva-hmr": "^0.3.2",
+    "cross-env": "^5.2.0",
     "eslint": "^4.14.0",
     "eslint-config-umi": "^0.1.1",
     "eslint-plugin-flowtype": "^2.34.1",
