--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
     "dva": "^2.4.1",
+    "dva-loading": "^2.0.6",
     "node-sass": "^4.10.0",
     "prop-types": "^15.6.2",
     "react": "^16.2.0",
